# precheck

./: .gitignore  delete_template_workseets.py  generate_tours_list.py  get_current_year_for_tour.py  get_mail.py  players_list.py  precheck.py  precheck_date.py  pyproject.toml  requirements.txt  test.py  token.pickle
templates/: r.json  tournaments.json
